--- a/index.html
+++ b/index.html
@@ -5,19 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <style>
+       #l1{
+           width: 30px;
+           height: 30px;
+       }
+       #l2{
+        width: 30px;
+        height: 30px;  
+       }
+       #l3{
+        width: 30px;
+        height: 30px;  
+       }
+       #l4{
+        width: 30px;
+        height: 30px; 
+       }
+       body{
+           background-color: aquamarine;
+       }
+    </style>
+   
 </head>
 <body>
     <h1>Entre em contato conosco!</h1><br>
-    <ul>
+    <ul style="list-style-type:none;">
        <h3>Outros canais de atendimento:</h3><br>
-        <li>Horarios de funcionamento: Das 07:00 às 12:00 e das 13:00 as 18:00</li>
-        <li>Fones:(88)99999-8888/(88)98888-9999</li>
-        <li>(88)99999-8888</li>
-        <li>E-mails:empresaX@gmail.com/empresaX@hotmail.com</li>
+        <li><img src="img/Relogio-icon.png" alt="" id="l1"> Horarios de funcionamento: Das 07:00 às 12:00 e das 13:00 as 18:00</li>
+        <li><img src="img/fone-icon.png" alt="" id="l2"> Fones:(88)99999-8888/(88)98888-9999</li>
+        <li><a href=" https://wa.me/5588999998888?text=Fale%20conosco%20por%20aqui!" target="_blank"><img src="img/WhatsApp-icon.png" alt="" id="l3"> </a> (88)99999-8888</li>
+        <li><img src="img/email-2-icon.png" alt="" id="l4"> E-mails:empresaX@gmail.com/empresaX@hotmail.com</li>
 
     </ul><br>
 
-    <form action="/action_page.php" target="_self">
+    <form action="" target="_self">
         <label for="label_nome">Nome</label><br>
         <input type="text" placeholder="Nome Completo"><br>
         <label for="label_email">E-mail</label><br>
@@ -28,7 +50,8 @@
         <input type="text" placeholder="(xx)xxxxx-xxxx"><br>
         <label for="label_msg">Mensagem</label><br>
         <textarea name="area_msg" id="area" cols="50" rows="4"></textarea><br><br>
-        <input type="button" value="Enviar">
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
     </form>
 
 </body>
